fixed overlaps in header nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,13 +47,24 @@ header {
 
 header ul {
 	display: flex;
-	flex-wrap: wrap;
 	align-items: center;
 	width: 100%;
+	flex-direction: column;
+	padding: 0;
 }
 
 header li {
 	justify-content: center;
+}
+/*
+
+.profile {
+	flex: 1 100%;
+}
+*/
+
+#divider {
+	display: none;
 }
 
 #app-name {
@@ -62,6 +73,7 @@ header li {
 	font-weight: 300;
 	padding: 2px;
 	border: 1px solid pink;
+	flex: 2 100%;
 }
 
 #bold-app-name {
@@ -208,11 +220,18 @@ button {
 	header li {
 		padding-right: 5px;
 		padding-left: 5px;
-		border: 1px solid yellow; //for testing
 	}
 
 	#app-name {
 		margin-right: auto;
+		flex: auto;
+	}
+
+	#divider {
+		display: block;
+		font-size: 2em;
+		font-family: 'Lato', sans-serif;
+		font-weight: 100;
 	}
 
 	nav {
@@ -229,7 +248,6 @@ button {
 		flex-direction: column;
 		margin-top: 20px;
 		padding: 0;
-/*		margin-left: 0;*/
 	}
 
 	nav li {
